force-app/main/default/objects/Opportunity_Counterparty_Comment__c/Opportunity_Counterparty_Comment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Counterparty Comment</label>
    <nameField>
        <displayFormat>OCC-{0000}</displayFormat>
        <label>Opportunity Counterparty Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Counterparty Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>