force-app/main/default/objects/Opportunity_Counterparty_Comment__c/fields/Related_Opportunity_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Counterparty__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Opportunity Counterparty</label>
    <referenceTo>Opportunity_Counterparty__c</referenceTo>
    <relationshipLabel>Opportunity Counterparty Comments</relationshipLabel>
    <relationshipName>Opportunity_Counterparty_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>